# MvthImage

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  COPYING.LESSER  ChangeLog  README  TODO  acinclude.m4  acinclude_sam.m4  aclocal.m4  config.h.cmake  config.h.in  configure.ac
scripts/: CMakeLists.txt  Makefile.am  pkgIndex.tcl  viewimage.tcl  viewimage_snit.tcl
src/: CMakeLists.txt  Makefile.am  commands.h  dynamic_load.c  dynamic_load.h  dynamic_symbols.c  dynamic_symbols.h  dynamic_symbols_mvth.c  dynamic_symbols_mvth.h  mvthImage.h  mvthimage_Init.c  preserve_mvthimage_state.tcl  preserve_plugin_state.c  register_plugin.c  viewimage_Init.c
src/DEPRECATED/video/: mng_utils.c  mng_utils.h  mpeg_context.h  mpeg_utils2.h  video_cmd.c
src/LoGaussian/: LoG_cmd.c  LoG_fltr.c
src/astereo/: astereo_cmd.c  astereo_fltr.c  astereo_fltr.h
src/axes/: axes_cmd.c  axes_fltr.c  axes_fltr.h
src/base/: images_context.c  images_context.h  images_types.h  images_utils.c  images_utils.h  mmap_handler.c  mmap_handler.h  mvth_colors.c  mvth_colors.h  mvthimagestate.c  mvthimagestate.h  readimages.c  readimages.h  stereo_context.c  stereo_context.h  stereo_context_t.h  variable_state.c  variable_state.h
src/blitimage/: blitimage.c
src/brighten/: brighten_cmd.c  brighten_fltr.c
src/canny/: canny_cmd.c  canny_fltr.c
src/circ/: circ_cmd.c
src/copy/: copy_cmd.c
src/corner/: corner_cmd.c  corner_fltr.c
src/delauney/: defs.c  defs.h  delauney_cmd.c  delauney_fltr.c  edgelist.c  edgelist.h  geometry.c  geometry.h  heap.c  heap.h  vor_memory.c  vor_memory.h  voronoi.c  voronoi.h
src/diff/: diff_cmd.c  diff_fltr.c
src/diffdmap/: diffdmap_cmd.c  diffdmap_fltr.c
src/dmap/: dmap_draw_cmd.c  dmap_draw_fltr.c
src/faugeras/: faugeras_stereo_cmd.c  faugeras_stereo_fltr.c
src/feature_extract/: feature_extract_cmd.c  feature_extract_fltr.c
src/filldmap/: filldmap_cmd.c  filldmap_fltr.c
src/fillimage/: fillimage_cmd.c  fillimage_fltr.c  fillimage_fltr.h
src/flushimage/: flushimage_cmd.c
src/gaussian/: gaussian_cmd.c  gaussian_fltr.c
src/grayscale2rgb/: grayscale2rgb_cmd.c  grayscale2rgb_fltr.c
src/green2gray/: green2gray_cmd.c  green2gray_fltr.c
src/hmap_shader/: hmap_shader_cmd.c  hmap_shader_fltr.c
src/hsv/: rgb2hsv_cmd.c  rgb2hsv_fltr.c
src/interface/: Makefile.am  README  mvth_image_interface.c  mvth_image_interface.h
src/invert/: invert_cmd.c  invert_fltr.c  invert_fltr.h
src/isometric/: isometric_cmd.c  isometric_fltr.c
src/kmeans/: kmeans_cmd.c  kmeans_fltr.c
src/list/: listimages_cmd.c
src/map_to_visual/: map_to_visual_cmd.c  map_to_visual_fltr.c
src/mkpair/: mkpair_cmd.c  mkpair_fltr.c
src/moravec/: moravec_cmd.c  moravec_fltr.c
src/new_image/: newimage_cmd.c
src/noise/: noise_cmd.c  noise_fltr.c
src/open/: openimage_cmd.c  readimages.c  readimages.h
src/open_locked/: openlockedimage_cmd.c
src/optical_flow/: opticalFlow_cmd.c  opticalFlow_fltr.c
src/paste/: paste_cmd.c  paste_fltr.c  paste_fltr.h
src/pyramid_stereo/: pyramid_stereo_cmd.c  pyramid_stereo_fltr.c
src/radial/: radial_cmd.c  radial_fltr.c
src/rectify/: rectify_cmd.c  rectify_fltr.c
src/resize/: resize_cmd.c  resize_fltr.c
src/rgb2grayscale/: rgb2grayscale_cmd.c  rgb2grayscale_fltr.c
src/roberts/: roberts_cmd.c  roberts_fltr.c
src/rotate/: rotate_cmd.c  rotate_fltr.c
src/rwarp/: rwarp_cmd.c  rwarp_fltr.c  rwarp_fltr.h
src/skewmetric/: skewmetrix_cmd.c  skewmetrix_fltr.c
src/stats/: stats_cmd.c  stats_fltr.c
src/swap/: swap_cmd.c
src/temporal_dmap/: linfill_dmap_fltr.c  tdmap_cmd.c  tdmap_fltr.c
src/text/: pangoft2toimg.c  pangoft2toimg.h  text_cmd.c
src/undo/: undo_cmd.c
src/utils/: Makefile.am  Rmatrix.c  Rmatrix.h  Tmatrix.c  Tmatrix.h  backproject.c  backproject.h  color_scheme.tcl  derivatives.c  derivatives.h  drawCircle.c  drawCircle.h  drawLine.c  drawLine.h  drawRect.c  drawRect.h  getColor.c  getColor.h  getJetRGB.c  getJetRGB.h  getMatch.c  getMatch.h  getModeMedian.c  getModeMedian.h  getRemap.c  getRemap.h  hsv_utils.c  hsv_utils.h  mersennetwister.c  mersennetwister.h  mvth_convert.c  mvth_convert.h  mvth_rng.c  mvth_rng.h  mvth_semaphore.c  mvth_semaphore.h  plot_imagescale.c  plot_imagescale.h  plot_imagescale_int.h  plotxy.c  (+8 more)
src/v_plotpoly/: v_plotpoly_cmd.c  v_plotpoly_fltr.c  v_plotpoly_fltr.h
src/verbose/: verbose_cmd.c
src/video/: mng_utils.c  mng_utils.h  mpeg_context.h  mpeg_utils2.c  mpeg_utils2.h  video_cmd.c
src/write_image/: writeframe_cmd.c  writeimage.c  writeimage.h  writeimage_cmd.c
src/zoom/: zoom_cmd.c  zoom_fltr.c
tools/: Makefile.am
tools/sdlviewer/: Makefile.am  readmmap.c  readmmap.h  sdlviewer.c
